--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 
     <string name="dialog_ok">確定</string>
     <string name="dialog_cancel">取消</string>
+    <string name="dialog_add">新增</string>
 
     <string name="search_hint">搜尋路線</string>
     <string name="route_go">往 </string>
