--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,10 @@
     <string name="search_hint">搜尋路線</string>
     <string name="route_go">往 </string>
 
+    <string name="notification_channel_default">一般提醒</string>
+    <string name="notification_channel_remind">到站提醒</string>
+    <string name="notification_channel_remind_msg">%s 即將抵達 %s 站</string>
+
     <string name="google_map_key">AIzaSyC9htzu12_uzx5KNc_R8M4pQK9fHlShxvA</string>
     <string name="google_map_error1">請開啟定位服務</string>
 </resources>
