--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,18 @@
     <string name="dialog_cancel">取消</string>
     <string name="dialog_add">新增</string>
 
+    <string name="status_progress">進行中</string>
+    <string name="status_finish">已結束</string>
+
     <string name="search_hint">搜尋路線</string>
-    <string name="route_go">往 </string>
-    
+    <string name="route_go1">%1$s往%2$s</string>
+    <string name="route_go2">%1$s 往 %2$s</string>
+
     <string name="stop_status_min">%1$d分%2$d秒</string>
     <string name="stop_status_nobus">尚未發車</string>
     <string name="stop_status_pit">進站中</string>
+
+    <string name="remind_time">到站前 %d 分提醒</string>
 
     <string name="notification_channel_default">一般提醒</string>
     <string name="notification_channel_remind">到站提醒</string>
