--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,14 +26,14 @@
     <string name="route_go1">%1$s往%2$s</string>
     <string name="route_go2">%1$s 往 %2$s</string>
 
-    <string name="stop_status_min">%1$d分%2$d秒</string>
+    <string name="stop_status_min">%1$02d分%2$02d秒</string>
     <string name="stop_status_nobus">尚未發車</string>
     <string name="stop_status_pit">即將抵達</string>
 
     <string name="remind_time">到站前 %d 分提醒</string>
 
-    <string name="route_info_startstation">起站 : %s</string>
-    <string name="route_info_endstation">訖站 : %s</string>
+    <string name="route_info_startstation">起站 : %1$s %2$s</string>
+    <string name="route_info_endstation">訖站 : %1$s %2$s</string>
 
     <string name="notification_channel_default">一般提醒</string>
     <string name="notification_channel_remind">到站提醒</string>
